<resources>
    <string name="app_name">PetNanny</string>
    <string name="title_home">主頁</string>
    <string name="title_chat">聊天室</string>
    <string name="title_order">訂單</string>
    <string name="title_profile">個人</string>
    <string name="service_take_a_bath">到府洗澡</string>
    <string name="service_train">到府訓練</string>
    <string name="service_beauty">到府美容</string>
    <string name="service_walk">遛狗散步</string>
    <string name="service_take_care">到府照顧</string>
    <string name="service_stay">住宿託管</string>

    <string name="you_know_nothing">You know nothing</string>


    <!--  spinner  -->
    <string name="type_array_title">寵物類型</string>
    <string-array name="type_array">
        <item>狗</item>
        <item>貓</item>
        <item>兔</item>
        <item>鼠</item>
        <item>鳥</item>
    </string-array>

    <string name="pet_array_title">請選擇您的寵物</string>
    <string-array name="pet_array">
        <item>新增更多寵物</item>
    </string-array>

    <string name="location_array_title">服務區域</string>
    <string-array name="location_array">
        <item>中正區</item>
        <item>萬華區</item>
        <item>中山區</item>
        <item>大安區</item>
        <item>大同區</item>
        <item>松山區</item>
        <item>信義區</item>
        <item>內湖區</item>
        <item>南港區</item>
        <item>士林區</item>
        <item>北投區</item>
        <item>文山區</item>
    </string-array>

    <string name="profile_add_nanny_service_array_title">選擇您的服務類別</string>
    <string-array name="profile_add_nanny_service">
        <item>到府照顧   $ 300 / 次</item>
        <item>到府洗澡   $ 800 / 次</item>
        <item>到府美容   $ 1200 / 次</item>
        <item>到府訓練   $ 1500 / 次</item>
        <item>遛狗散步   $ 500 / 次</item>
        <item>住宿託管   $ 1000 / 次</item>
    </string-array>

    <string name="figure_array_title">選擇你的寵物體型</string>
    <string-array name="figure_array">
        <item>迷你 小於 5 公斤</item>
        <item>小型 5 ~ 10 公斤 </item>
        <item>中型 10 ~ 20 公斤</item>
        <item>大型 20 ~ 40 公斤</item>
        <item>超大型 大於 40 公斤</item>
    </string-array>

    <string name="pet_age_array_title">選擇你的寵物體型</string>
    <string-array name="pet_age_array">
        <item>1 歲</item>
        <item>2 歲</item>
        <item>3 歲</item>
        <item>4 歲</item>
        <item>5 歲</item>
        <item>6 歲</item>
        <item>7 歲</item>
        <item>8 歲</item>
        <item>9 歲</item>
        <item>10 歲</item>
        <item>11 歲</item>
        <item>12 歲</item>
        <item>13 歲</item>
        <item>14 歲</item>
        <item>15 歲</item>
        <item>16 歲</item>
        <item>17 歲</item>
        <item>18 歲</item>
        <item>19 歲</item>
        <item>20 歲</item>
    </string-array>

    <string name="nanny_license_array_title">選擇你的證照類型</string>
    <string-array name="nanny_license_array">
        <item>良民證</item>
        <item>特定寵物業許可證</item>
        <item>獸醫師執照</item>
        <item>美容師執照</item>
    </string-array>

</resources>