<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.nicole.petnanny.ui.home.HomeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".ui.home.HomeFragment">


                <ImageView
                    android:id="@+id/imageView_home_main"
                    android:layout_width="wrap_content"
                    android:layout_height="204dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/home_mainimage" />

                <TextView
                    android:id="@+id/text_home"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="100dp"
                    android:layout_marginEnd="8dp"
                    android:letterSpacing="0.05"
                    android:text="給您的寵物一個更棒的生活"
                    android:textAlignment="center"
                    android:textColor="@color/colorWhite"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/imageView_home_main" />


                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/btn_nanny_center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="32dp"
                    android:minHeight="50dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_home">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center">

                        <ImageView
                            android:id="@+id/imageView2"
                            android:layout_width="26dp"
                            android:layout_height="24dp"
                            android:layout_marginEnd="16dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/textView2"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:srcCompat="@drawable/ic_home_search_24dp" />

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="16dp"
                            android:text="搜尋您想要的保姆"
                            android:textColor="@color/colorGray"
                            android:textSize="18sp"
                            app:layout_constraintStart_toEndOf="@+id/imageView2"
                            app:layout_constraintTop_toTopOf="@+id/imageView2" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </com.google.android.material.card.MaterialCardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/btn_home_beauty"
                    android:layout_width="90dp"
                    android:layout_height="60dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    app:cardCornerRadius="6dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/btn_home_shower"
                    app:layout_constraintTop_toBottomOf="@+id/imageView_home_main">

                    <ImageView
                        android:id="@+id/imageView_2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal"
                        android:scaleType="centerCrop"
                        android:src="@drawable/iv_home_s2" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/btn_walk"
                    android:layout_width="90dp"
                    android:layout_height="60dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="16dp"
                    app:cardCornerRadius="6dp"
                    app:layout_constraintEnd_toStartOf="@+id/btn_stay"
                    app:layout_constraintStart_toEndOf="@+id/btn_Home_train"
                    app:layout_constraintTop_toBottomOf="@+id/textView4">

                    <ImageView
                        android:id="@+id/imageView_1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal"
                        android:scaleType="centerCrop"
                        android:src="@drawable/iv_home_s1" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/btn_stay"
                    android:layout_width="90dp"
                    android:layout_height="60dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"

                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    app:cardCornerRadius="6dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/btn_walk"
                    app:layout_constraintTop_toBottomOf="@+id/textView5">

                    <ImageView
                        android:id="@+id/imageView_3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal"
                        android:scaleType="centerCrop"
                        android:src="@drawable/iv_home_s3" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/btn_home_shower"
                    android:layout_width="90dp"
                    android:layout_height="60dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="16dp"
                    app:cardCornerRadius="6dp"
                    app:layout_constraintEnd_toStartOf="@+id/btn_home_beauty"
                    app:layout_constraintStart_toEndOf="@+id/btn_home_visit"
                    app:layout_constraintTop_toBottomOf="@+id/imageView_home_main">

                    <ImageView
                        android:id="@+id/imageView_4"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal"
                        android:scaleType="centerCrop"
                        android:src="@drawable/iv_home_s4" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/btn_Home_train"
                    android:layout_width="90dp"
                    android:layout_height="60dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    app:cardCornerRadius="6dp"
                    app:layout_constraintEnd_toStartOf="@+id/btn_walk"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_home_visit">

                    <ImageView
                        android:id="@+id/imageView_5"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal"
                        android:scaleType="centerCrop"
                        android:src="@drawable/iv_home_s5" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/btn_home_visit"
                    android:layout_width="90dp"
                    android:layout_height="60dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"

                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    app:cardCornerRadius="6dp"
                    app:layout_constraintEnd_toStartOf="@+id/btn_home_shower"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView_home_main">

                    <ImageView
                        android:id="@+id/imageView_6"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal"
                        android:scaleType="centerCrop"
                        android:src="@drawable/iv_home_s6" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/tv_home_visit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/service_take_care"
                    android:textColor="@color/colorDeepGray"
                    android:textSize="13sp"
                    app:layout_constraintEnd_toEndOf="@+id/btn_home_visit"
                    app:layout_constraintStart_toStartOf="@+id/btn_home_visit"
                    app:layout_constraintTop_toBottomOf="@+id/btn_home_visit" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/service_take_a_bath"
                    android:textColor="@color/colorDeepGray"
                    android:textSize="13sp"
                    app:layout_constraintEnd_toEndOf="@+id/btn_home_shower"
                    app:layout_constraintStart_toStartOf="@+id/btn_home_shower"
                    app:layout_constraintTop_toBottomOf="@+id/btn_home_shower" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/service_beauty"
                    android:textColor="@color/colorDeepGray"
                    android:textSize="13sp"
                    app:layout_constraintEnd_toEndOf="@+id/btn_home_beauty"
                    app:layout_constraintStart_toStartOf="@+id/btn_home_beauty"
                    app:layout_constraintTop_toBottomOf="@+id/btn_home_beauty" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/service_train"
                    android:textColor="@color/colorDeepGray"
                    android:textSize="13sp"
                    app:layout_constraintEnd_toEndOf="@+id/btn_Home_train"
                    app:layout_constraintStart_toStartOf="@+id/btn_Home_train"
                    app:layout_constraintTop_toBottomOf="@+id/btn_Home_train" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/service_walk"
                    android:textColor="@color/colorDeepGray"
                    android:textSize="13sp"
                    app:layout_constraintEnd_toEndOf="@+id/btn_walk"
                    app:layout_constraintStart_toStartOf="@+id/btn_walk"
                    app:layout_constraintTop_toBottomOf="@+id/btn_walk" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/service_stay"
                    android:textColor="@color/colorDeepGray"
                    android:textSize="13sp"
                    app:layout_constraintEnd_toEndOf="@+id/btn_stay"
                    app:layout_constraintStart_toStartOf="@+id/btn_stay"
                    app:layout_constraintTop_toBottomOf="@+id/btn_stay" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="32dp"
                    android:text="保姆列表"
                    android:textColor="@color/colorDeepGray"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView6" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_home_nanny"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView9" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

        </layout>